# snake

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  rust-toolchain.toml
ci/: before_deploy.sh
src/: config.rs  game_loop.rs  main.rs  renderer.rs  snake_scene.rs  title_scene.rs
src/engine/: entity.rs  game_loop.rs  mod.rs  point.rs  renderer.rs  scene_manager.rs  timestep.rs  traits.rs
src/entities/: board.rs  food.rs  mod.rs  score.rs  snake.rs  text.rs  world.rs
src/scenes/: mod.rs  snake.rs  title.rs
