[package]
name = "snake"
version = "0.1.4"
authors = ["kschat <kyleschattler@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18.2"
rand = "0.8.0"
impl_ops = "0.1.1"
num-traits = "0.2"
anyhow = "1.0.37"
structopt = "0.3.21"
